[ADD] Techs section, sprite with fallback, [PENDING] new project page info

--- a/src/content/projects/en/construelectricjv.mdx
+++ b/src/content/projects/en/construelectricjv.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Project - Ejepets'
-projectName: 'Ejepets'
+title: 'Project - ConstruelectricJV'
+projectName: 'ConstruelectricJV'
 excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
-description: 'This project was led by love for our pets, with the goal to provide an easy way to reach those business that offer services for our best friends, all in one place.'
-wasForClient: false
-stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
-mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
-mockupAlt: 'Ejepets preview image'
-demoLink: 'https://ejepets.vercel.app'
+description: 'ConstruelectricJV - Electrical and plumbering services company based in Chile.'
+wasForClient: true
+stack: ["HTML5", "CSS", "JavaScript"]
+mockup: '@assets/images/mockups/construelectricjv/construelectricjv_1.webp'
+mockupAlt: 'ConstruelectricJV preview image'
+demoLink: 'https://construelectricjv.com'
 ---
 
 import Typography from '@components/Typography.astro';
@@ -69,10 +69,14 @@ export const {
   # Gallery
 
   <Gallery>
-    ![EjePets site gallery image 1](@assets/images/mockups/ejepets/ejepets_2.webp)
+    ![ConstruelectricJV site gallery image 1](@assets/images/mockups/construelectricjv/construelectricjv_2.webp)
 
-    ![EjePets site gallery image 2](@assets/images/mockups/ejepets/ejepets_3.webp)
+    ![ConstruelectricJV site gallery image 2](@assets/images/mockups/construelectricjv/construelectricjv_4.webp)
 
-    ![EjePets site gallery image 3](@assets/images/mockups/ejepets/ejepets_4.webp)
+    ![ConstruelectricJV site gallery image 3](@assets/images/mockups/construelectricjv/construelectricjv_5.webp)
+
+    ![ConstruelectricJV site gallery image 4](@assets/images/mockups/construelectricjv/construelectricjv_6.webp)
+
+    ![ConstruelectricJV site gallery image 5](@assets/images/mockups/construelectricjv/construelectricjv_7.webp)
   </Gallery>
 </Row>
