--- a/src/content/projects/es/construelectricjv.mdx
+++ b/src/content/projects/es/construelectricjv.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Projecto - Ejepets'
-projectName: 'Ejepets'
-excerpt: 'Portal para descubrir y ubicar negocios relacionados con mascotas en Pereira, Colombia'
-description: 'Éste proyecto fue motivado por el amor hacia nuestras mascotas, con el objetivo de proveer de una forma sencilla para alcanzar aquellos negocios que ofrecen servicios para nuestros mejores amigos, todo en un lugar.'
-wasForClient: false
-stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
-mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
-mockupAlt: 'Vista previa de Ejepets'
-demoLink: 'https://ejepets.vercel.app'
+title: 'Projecto - ConstruelectricJV'
+projectName: 'ConstruelectricJV'
+excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
+description: 'ConstruelectricJV - Compañía de servicios eléctricos y de plomería en Chile'
+wasForClient: true
+stack: ["HTML5", "CSS", "JavaScript"]
+mockup: '@assets/images/mockups/construelectricjv/construelectricjv_1.webp'
+mockupAlt: 'Vista previa de ConstruelectricJV'
+demoLink: 'https://construelectricjv.com'
 ---
 
 import Typography from '@components/Typography.astro';
@@ -69,10 +69,14 @@ export const {
   # Galería
 
   <Gallery>
-    ![Imagen 1 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_2.webp)
+    ![Imagen 1 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_2.webp)
 
-    ![Imagen 2 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_3.webp)
+    ![Imagen 2 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_4.webp)
 
-    ![Imagen 3 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_4.webp)
+    ![Imagen 3 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_5.webp)
+
+    ![Imagen 4 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_6.webp)
+
+    ![Imagen 5 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_7.webp)
   </Gallery>
 </Row>
