[ADD] Footer, project post [FIX] Sprite anim fallback and hover end

--- a/src/content/projects/en/construelectricjv.mdx
+++ b/src/content/projects/en/construelectricjv.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Project - ConstruelectricJV'
 projectName: 'ConstruelectricJV'
-excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
+excerpt: 'Landing page for an electrical and plumbing company based in Chile.'
 description: 'ConstruelectricJV - Electrical and plumbering services company based in Chile.'
 wasForClient: true
 stack: ["HTML5", "CSS", "JavaScript"]
@@ -37,7 +37,9 @@ export const {
 <Row paddedRight>
   # What makes this unique
 
-  The objective was to create a tool for my city that enables people to discover businesses dedicated to enhancing the well being of their best friends. The seed of this idea sprouted when I envisioned the concern of my pet falling ill, and the potential to find a nearby establishment for immediate attention. Therefore, EjePets aims to gather all local businesses offering essential pet services within easy reach, ensuring convenience for pet owners.
+  This was my first commercial project, so I hold it in high regard. Additionally, I had the opportunity to share my knowledge with a colleague during the site development process, which brings me satisfaction, as contributing to the knowledge of others enriches my soul.
+
+  Furthermore, I seized the chance to learn the basics of SEO in order to enhance the site's visibility, nurturing my passion for continuous learning.
 </Row>
 
 <Row evenColumns inverted>
@@ -45,7 +47,7 @@ export const {
     <div>
       # Why these technologies
 
-      Given its robustness and ability to optimize web applications, Next.js allowed for the optimal management of site routing, creating a protected route for the admin panel, and providing optimized resources based on the user's device. Furthermore, thanks to the use of React's hooks, it was possible to handle map interactions efficiently, applying real-time filters to locate establishments that offer precisely what is needed.
+      As mentioned earlier, this project was developed with the support of a colleague to whom I could share basic knowledge in web development. For this reason, I considered it prudent to choose a basic technological stack, yet following best practices to, even given the circumstances, deliver a professional product.
     </div>
   </div>
   <div>
@@ -60,9 +62,7 @@ export const {
 <Row paddedRight>
   # Things that made it worth it
 
-  Given the project's characteristics, I managed to practice better handling of external APIs, the use of non-relational databases like Firestore, and form management to add new establishments, connecting the data with Firebase.
-
-  While this represents a technical advancement, my favorite part is reaching out to the establishments to introduce them to the project and request permission to add them to the map. Successfully conveying the site's purpose, receiving beautiful images firsthand from these establishments, and putting my communication skills into practice with others were enriching experiences.
+  The fact that it is my first commercial project filled me with enthusiasm, as it represented the first economic reward for doing what I am passionate about, something that, with a lot of effort, I have managed to learn. This motivates me to continue on this path, thereby gaining confidence in my knowledge.
 </Row>
 
 <Row> 
