--- a/src/content/projects/es/construelectricjv.mdx
+++ b/src/content/projects/es/construelectricjv.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Projecto - ConstruelectricJV'
 projectName: 'ConstruelectricJV'
-excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
+excerpt: 'Landing page para una compañía eléctrica y de plomería radicada en Chile'
 description: 'ConstruelectricJV - Compañía de servicios eléctricos y de plomería en Chile'
 wasForClient: true
 stack: ["HTML5", "CSS", "JavaScript"]
@@ -37,7 +37,9 @@ export const {
 <Row paddedRight>
   # Qué lo hace único
 
-  El objetivo fue proveer una herramienta para mi ciudad que permita a mi gente conocer aquellos emprendimientos que pueden mejorar la vida de sus mejores amigos. Esto nacio de una preocupación personal sobre qué hacer si mi mascota llegase a enfermar y por desconocer los establecimientos cercanos a mi área no poder brindarle una atención inmediata. Así, EjePets busca acercar a todos esos emprendimientos locales que ofrezcan los servicios que necesiten, todo al alcance de sus manos.
+  Este fue mi primer proyecto comercial, por lo que le tengo un gran aprecio. Además, logré compartir mis conocimientos con una compañera durante el proceso de desarrollo del sitio, lo cual me llena de satisfacción, ya que contribuir al conocimiento de los demás enriquece mi alma.
+
+  Asimismo, aproveché la oportunidad para aprender los conceptos básicos de SEO con el fin de dar visibilidad al sitio, alimentando así mi pasión por el aprendizaje.
 </Row>
 
 <Row evenColumns inverted>
@@ -45,7 +47,7 @@ export const {
     <div>
       # Por qué estas tecnologías
 
-      Dada su robustez y capacidad para optimizar aplicaciones web, Next.js permitió gestionar de la mejor manera el enrutamiento del sitio, creando una ruta protegida para el panel de administrador y proporcionando recursos optimizados según el dispositivo del usuario. Además, gracias al uso de los *hooks* de React, fue posible manejar de manera óptima la interacción con el mapa, aplicando filtros en tiempo real para encontrar los establecimientos que ofrecen exactamente lo que se necesita.
+      Como se mencionó anteriormente, este proyecto fue desarrollado con el apoyo de una compañera a quien pude compartirle conocimientos básicos en desarrollo web. Por esto, consideré prudente elegir un stack tecnológico básico, pero siguiendo las mejores prácticas para, aún dadas las circunstancias, entregar un producto profesional.
     </div>
   </div>
   <div>
@@ -60,9 +62,7 @@ export const {
 <Row paddedRight>
   # Razones por las que valió el esfuerzo
 
-  Dadas las características del proyecto, logré practicar un mejor manejo de APIs externas, el uso de bases de datos no relacionales como Firestore, el manejo de formularios para añadir nuevos establecimientos y conectar los datos con Firebase.
-
-  Si bien esto representa un avance técnico, mi parte favorita es contactar con los establecimientos para darles a conocer el proyecto y solicitar su permiso para añadirlos al mapa. Lograr transmitir el objetivo del sitio, recibir de primera mano imágenes hermosas de dichos establecimientos y poner en práctica mi comunicación con otros fue enriquecedor.
+  El hecho de que sea mi primer proyecto comercial me llenó de ánimo, ya que representó la primera entrada económica por hacer lo que me apasiona, aquello que ,con mucho esfuerzo, he logrado aprender, lo cual me motiva a seguir por este camino, ganando así confianza en mis conocimientos.
 </Row>
 
 <Row> 
