--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Projecto - Ejepets'
 projectName: 'Ejepets'
-excerpt: 'Portal para descubrir y ubicar negocios relacionados con mascotas en Pereira, Colombia'
+excerpt: 'Portal para descubrir negocios enfocados en mascotas en Pereira, Colombia'
 description: 'Éste proyecto fue motivado por el amor hacia nuestras mascotas, con el objetivo de proveer de una forma sencilla para alcanzar aquellos negocios que ofrecen servicios para nuestros mejores amigos, todo en un lugar.'
 wasForClient: false
 stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
