--- a/src/content/projects/en/ejepets.mdx
+++ b/src/content/projects/en/ejepets.mdx
@@ -8,6 +8,20 @@ stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
 mockupAlt: 'Ejepets preview image'
 demoLink: 'https://ejepets.vercel.app'
+galleryImages: [
+  {
+    src: "@assets/images/mockups/ejePets/ejepets_2.webp",
+    alt: "EjePets site gallery image 1"
+  },
+  {
+    src: "@assets/images/mockups/ejePets/ejepets_3.webp",
+    alt: "EjePets site gallery image 1"
+  },
+  {
+    src: "@assets/images/mockups/ejePets/ejepets_4.webp",
+    alt: "EjePets site gallery image 1"
+  },
+]
 ---
 
 import Typography from '@components/Typography.astro';
@@ -63,16 +77,4 @@ export const {
   Given the project's characteristics, I managed to practice better handling of external APIs, the use of non-relational databases like Firestore, and form management to add new establishments, connecting the data with Firebase.
 
   While this represents a technical advancement, my favorite part is reaching out to the establishments to introduce them to the project and request permission to add them to the map. Successfully conveying the site's purpose, receiving beautiful images firsthand from these establishments, and putting my communication skills into practice with others were enriching experiences.
-</Row>
-
-<Row> 
-  # Gallery
-
-  <Gallery>
-    ![EjePets site gallery image 1](@assets/images/mockups/ejepets/ejepets_2.webp)
-
-    ![EjePets site gallery image 2](@assets/images/mockups/ejepets/ejepets_3.webp)
-
-    ![EjePets site gallery image 3](@assets/images/mockups/ejepets/ejepets_4.webp)
-  </Gallery>
 </Row>
