--- a/src/content/projects/es/construelectricjv.mdx
+++ b/src/content/projects/es/construelectricjv.mdx
@@ -8,6 +8,28 @@ stack: ["HTML5", "CSS", "JavaScript"]
 mockup: '@assets/images/mockups/construelectricjv/construelectricjv_1.webp'
 mockupAlt: 'Vista previa de ConstruelectricJV'
 demoLink: 'https://construelectricjv.com'
+galleryImages: [
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_2.webp",
+    alt: "Imagen 1 de la galería del sitio ConstruelectricJV"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_4.webp",
+    alt: "Imagen 2 de la galería del sitio ConstruelectricJV"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_5.webp",
+    alt: "Imagen 3 de la galería del sitio ConstruelectricJV"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_6.webp",
+    alt: "Imagen 4 de la galería del sitio ConstruelectricJV"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_7.webp",
+    alt: "Imagen 5 de la galería del sitio ConstruelectricJV"
+  },
+]
 ---
 
 import Typography from '@components/Typography.astro';
@@ -63,20 +85,4 @@ export const {
   # Razones por las que valió el esfuerzo
 
   El hecho de que sea mi primer proyecto comercial me llenó de ánimo, ya que representó la primera entrada económica por hacer lo que me apasiona, aquello que ,con mucho esfuerzo, he logrado aprender, lo cual me motiva a seguir por este camino, ganando así confianza en mis conocimientos.
-</Row>
-
-<Row> 
-  # Galería
-
-  <Gallery>
-    ![Imagen 1 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_2.webp)
-
-    ![Imagen 2 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_4.webp)
-
-    ![Imagen 3 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_5.webp)
-
-    ![Imagen 4 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_6.webp)
-
-    ![Imagen 5 de la galería del sitio ConstruelectricJV](@assets/images/mockups/construelectricjv/construelectricjv_7.webp)
-  </Gallery>
 </Row>
