--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -8,6 +8,28 @@ stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
 mockupAlt: 'Vista previa de Ejepets'
 demoLink: 'https://ejepets.vercel.app'
+galleryImages: [
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_2.webp",
+    alt: "Imagen 1 de la galería del sitio EjePets"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_4.webp",
+    alt: "Imagen 2 de la galería del sitio EjePets"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_5.webp",
+    alt: "Imagen 3 de la galería del sitio EjePets"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_6.webp",
+    alt: "Imagen 4 de la galería del sitio EjePets"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_7.webp",
+    alt: "Imagen 5 de la galería del sitio EjePets"
+  },
+]
 ---
 
 import Typography from '@components/Typography.astro';
@@ -63,16 +85,4 @@ export const {
   Dadas las características del proyecto, logré practicar un mejor manejo de APIs externas, el uso de bases de datos no relacionales como Firestore, el manejo de formularios para añadir nuevos establecimientos y conectar los datos con Firebase.
 
   Si bien esto representa un avance técnico, mi parte favorita es contactar con los establecimientos para darles a conocer el proyecto y solicitar su permiso para añadirlos al mapa. Lograr transmitir el objetivo del sitio, recibir de primera mano imágenes hermosas de dichos establecimientos y poner en práctica mi comunicación con otros fue enriquecedor.
-</Row>
-
-<Row> 
-  # Galería
-
-  <Gallery>
-    ![Imagen 1 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_2.webp)
-
-    ![Imagen 2 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_3.webp)
-
-    ![Imagen 3 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_4.webp)
-  </Gallery>
 </Row>
