Fixed typo on ejepets project urls

--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -10,24 +10,16 @@ mockupAlt: 'Vista previa de Ejepets'
 demoLink: 'https://ejepets.vercel.app'
 galleryImages: [
   {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_2.webp",
-    alt: "Imagen 1 de la galería del sitio EjePets"
+    src: "@assets/images/mockups/ejepets/ejepets_2.webp",
+    alt: "EjePets site gallery image 1"
   },
   {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_4.webp",
-    alt: "Imagen 2 de la galería del sitio EjePets"
+    src: "@assets/images/mockups/ejepets/ejepets_3.webp",
+    alt: "EjePets site gallery image 1"
   },
   {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_5.webp",
-    alt: "Imagen 3 de la galería del sitio EjePets"
-  },
-  {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_6.webp",
-    alt: "Imagen 4 de la galería del sitio EjePets"
-  },
-  {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_7.webp",
-    alt: "Imagen 5 de la galería del sitio EjePets"
+    src: "@assets/images/mockups/ejepets/ejepets_4.webp",
+    alt: "EjePets site gallery image 1"
   },
 ]
 ---
