First mobile approach of new projects showcase

--- a/src/content/projects/en/construelectricjv.mdx
+++ b/src/content/projects/en/construelectricjv.mdx
@@ -2,8 +2,9 @@
 title: 'Project - ConstruelectricJV'
 projectName: 'ConstruelectricJV'
 excerpt: 'Landing page for an electrical and plumbing company based in Chile.'
-description: 'ConstruelectricJV - Electrical and plumbering services company based in Chile.'
+description: 'ConstruelectricJV - Electrical and plumbing services company based in Chile.'
 wasForClient: true
+logo: '@assets/images/logos/construelectricjv.svg'
 stack: ["HTML5", "CSS", "JavaScript"]
 mockup: '@assets/images/mockups/construelectricjv/construelectricjv_1.webp'
 mockupAlt: 'ConstruelectricJV preview image'
