--- a/src/content/projects/en/ejepets.mdx
+++ b/src/content/projects/en/ejepets.mdx
@@ -4,6 +4,7 @@ projectName: 'Ejepets'
 excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
 description: 'This project was led by love for our pets, with the goal to provide an easy way to reach those business that offer services for our best friends, all in one place.'
 wasForClient: false
+logo: '@assets/images/logos/ejepets.svg'
 stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
 mockupAlt: 'Ejepets preview image'
