--- a/src/content/projects/es/construelectricjv.mdx
+++ b/src/content/projects/es/construelectricjv.mdx
@@ -1,10 +1,11 @@
 ---
-title: 'Projecto - ConstruelectricJV'
+title: 'Proyecto - ConstruelectricJV'
 projectName: 'ConstruelectricJV'
 excerpt: 'Landing page para una compañía eléctrica y de plomería radicada en Chile'
 description: 'ConstruelectricJV - Compañía de servicios eléctricos y de plomería en Chile'
 wasForClient: true
 stack: ["HTML5", "CSS", "JavaScript"]
+logo: '@assets/images/logos/construelectricjv.svg'
 mockup: '@assets/images/mockups/construelectricjv/construelectricjv_1.webp'
 mockupAlt: 'Vista previa de ConstruelectricJV'
 demoLink: 'https://construelectricjv.com'
