--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -1,9 +1,10 @@
 ---
-title: 'Projecto - Ejepets'
+title: 'Proyecto - Ejepets'
 projectName: 'Ejepets'
 excerpt: 'Portal para descubrir negocios enfocados en mascotas en Pereira, Colombia'
 description: 'Éste proyecto fue motivado por el amor hacia nuestras mascotas, con el objetivo de proveer de una forma sencilla para alcanzar aquellos negocios que ofrecen servicios para nuestros mejores amigos, todo en un lugar.'
 wasForClient: false
+logo: '@assets/images/logos/ejepets.svg'
 stack: ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 mockup: '@assets/images/mockups/ejepets/ejepets_1.webp'
 mockupAlt: 'Vista previa de Ejepets'
