--- a/src/content/projects/es/construelectricjv.mdx
+++ b/src/content/projects/es/construelectricjv.mdx
@@ -11,24 +11,20 @@ mockupAlt: 'Vista previa de ConstruelectricJV'
 demoLink: 'https://construelectricjv.com'
 galleryImages: [
   {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_1.webp",
+    alt: "ConstruelectricJV site gallery image 1"
+  },
+  {
     src: "@assets/images/mockups/construelectricjv/construelectricjv_2.webp",
-    alt: "Imagen 1 de la galería del sitio ConstruelectricJV"
+    alt: "ConstruelectricJV site gallery image 2"
+  },
+  {
+    src: "@assets/images/mockups/construelectricjv/construelectricjv_3.webp",
+    alt: "ConstruelectricJV site gallery image 3"
   },
   {
     src: "@assets/images/mockups/construelectricjv/construelectricjv_4.webp",
-    alt: "Imagen 2 de la galería del sitio ConstruelectricJV"
-  },
-  {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_5.webp",
-    alt: "Imagen 3 de la galería del sitio ConstruelectricJV"
-  },
-  {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_6.webp",
-    alt: "Imagen 4 de la galería del sitio ConstruelectricJV"
-  },
-  {
-    src: "@assets/images/mockups/construelectricjv/construelectricjv_7.webp",
-    alt: "Imagen 5 de la galería del sitio ConstruelectricJV"
+    alt: "ConstruelectricJV site gallery image 4"
   },
 ]
 ---
